# aeros-ai-core-kernel

./: .env.example  .gitignore  README.md  docker-compose.control-plane.yml  docker-compose.yml  pyproject.toml
docs/: control-plane-backlog.md  demo_playbook.md  enterprise-control-plane-blueprint.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
scripts/: generate_enterprise_blueprint.py  run_api.sh  run_e2e.sh  run_humidity_scenario.sh  run_magic_e2e_suite.sh  run_mqtt_demo.sh  run_topology.sh  simulate_digital_twin.py  terraform_validate.sh  validate_deployment.py  validate_environment_configs.py
specs/: 000_master_build_curriculum.md  001_areos_manifesto.md  002_aws_native_reference_architecture.md  003_ot_it_and_unified_namespace.md  004_isa95_isa88_domain_model.md  005_dendrix_humidity_excursion_scenario.md  006_security_multitenancy_operational_pillars.md  007_weeks_1_to_5_implementation_map.md  008_enterprise_32_week_roadmap.md  009_connector_sdk_and_industry_pack_strategy.md  010_phase_3_to_5_implementation_map.md
tenants/: README.md
tests/: test_agent_orchestrator.py  test_agent_tools.py  test_apqr_builder.py  test_apqr_hardened.py  test_bedrock_guardrails.py  test_bedrock_runtime_client.py  test_bedrock_runtime_contracts.py  test_canonical_event.py  test_cmms_erp_lims_connector_pack.py  test_connector_manifests.py  test_connector_sdk_hardened.py  test_connector_validation_pack.py  test_control_plane.py  test_deterministic_answer.py  test_domain_models.py  (+41 more)
(+356 files in other folders)
